[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/Audio/Title_Screen/switch4.ogg" type="AudioStream" id=2]
[ext_resource path="res://Resources/Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/square-rounded-xxl.png" type="Texture" id=4]
[ext_resource path="res://Resources/Audio/Title_Screen/click1.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes/VolumeSliderPauseMenu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 48
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Resources/Fonts/OpenSans-SemiBold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = SubResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PauseScreenTint" type="ColorRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_right = -5.0
color = Color( 0, 0, 0, 0.588235 )

[node name="PauseMenuBG" type="ColorRect" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -235.0
margin_right = 315.0
margin_bottom = 235.0
color = Color( 1, 1, 1, 0 )

[node name="Sprite" type="Sprite" parent="PauseMenuBG"]
modulate = Color( 1, 1, 1, 0.180392 )
position = Vector2( 320, 225 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="PauseMenuBG"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -205.0
margin_right = 107.001
margin_bottom = -145.0
custom_colors/font_color = Color( 0.960784, 0.866667, 0.219608, 1 )
custom_fonts/font = SubResource( 3 )
text = "PAUSED"
align = 1

[node name="ResumeButton" type="Button" parent="PauseMenuBG"]
pause_mode = 2
margin_left = 218.0
margin_top = 125.0
margin_right = 413.0
margin_bottom = 181.0
focus_mode = 0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.835294, 0.839216, 0.752941, 1 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Resume"
flat = true

[node name="ControlsButton" type="Button" parent="PauseMenuBG"]
pause_mode = 2
margin_left = 218.0
margin_top = 210.0
margin_right = 413.0
margin_bottom = 266.0
focus_mode = 0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.835294, 0.839216, 0.752941, 1 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Controls"
flat = true

[node name="SettingsButton" type="Button" parent="PauseMenuBG"]
pause_mode = 2
margin_left = 218.0
margin_top = 295.0
margin_right = 413.0
margin_bottom = 266.0
focus_mode = 0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.835294, 0.839216, 0.752941, 1 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Settings"
flat = true

[node name="QuitButton" type="Button" parent="PauseMenuBG"]
pause_mode = 2
margin_left = 218.0
margin_top = 380.0
margin_right = 413.0
margin_bottom = 351.0
focus_mode = 0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.835294, 0.839216, 0.752941, 1 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Back"
flat = true

[node name="ControlsBG" type="ColorRect" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -235.0
margin_right = 315.0
margin_bottom = 235.0
color = Color( 0.309804, 0.309804, 0.309804, 0 )

[node name="Sprite" type="Sprite" parent="ControlsBG"]
modulate = Color( 1, 1, 1, 0.180392 )
position = Vector2( 320, 225 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="ControlsBG"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -315.0
margin_right = 315.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0.960784, 0.866667, 0.219608, 1 )
custom_fonts/font = SubResource( 5 )
text = "CONTROLS"
align = 1

[node name="Label2" type="Label" parent="ControlsBG"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.0
margin_top = -158.0
margin_right = 177.0
margin_bottom = 158.0
custom_colors/font_color = Color( 0.835294, 0.839216, 0.752941, 1 )
custom_fonts/font = SubResource( 6 )
text = "Move: WASD
Sprint: Hold Shift
Sneak: Hold Ctrl

Shoot: Left Mouse Button
Aim: Hold Right Mouse Button
Reload: R

Interact: E

Pause: ESC"
align = 1

[node name="ControlsCloseButton" type="Button" parent="ControlsBG"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -53.0
margin_top = -46.0
margin_right = 53.0
focus_mode = 0
custom_colors/font_color = Color( 0.835294, 0.839216, 0.752941, 1 )
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
text = "Close"
flat = true

[node name="SettingsBG" type="ColorRect" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -235.0
margin_right = 315.0
margin_bottom = 235.0
color = Color( 0.309804, 0.309804, 0.309804, 0 )
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="SettingsBG"]
modulate = Color( 1, 1, 1, 0.180392 )
position = Vector2( 320, 225 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="SettingsBG"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -315.0
margin_right = 315.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0.960784, 0.866667, 0.219608, 1 )
custom_fonts/font = SubResource( 5 )
text = "OPTIONS"
align = 1

[node name="SettingsCloseButton" type="Button" parent="SettingsBG"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -53.0
margin_top = -46.0
margin_right = 53.0
focus_mode = 0
custom_colors/font_color = Color( 0.835294, 0.839216, 0.752941, 1 )
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
text = "Close"
flat = true

[node name="ClickAudio" type="AudioStreamPlayer" parent="SettingsBG"]
unique_name_in_owner = true
stream = ExtResource( 2 )
volume_db = 3.312
pitch_scale = 0.59
bus = "SFX"

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.0
margin_top = -142.0
margin_right = 215.0
margin_bottom = 98.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsBG/VBoxContainer"]
margin_right = 408.0
margin_bottom = 60.0

[node name="Master" type="Label" parent="SettingsBG/VBoxContainer/VBoxContainer"]
margin_right = 408.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 8 )
text = "Master"

[node name="MasterSlider" type="HSlider" parent="SettingsBG/VBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 408.0
margin_bottom = 60.0
max_value = 1.0
step = 0.001
value = 0.5

[node name="VBoxContainer2" type="VBoxContainer" parent="SettingsBG/VBoxContainer"]
margin_top = 64.0
margin_right = 408.0
margin_bottom = 124.0

[node name="SFX" type="Label" parent="SettingsBG/VBoxContainer/VBoxContainer2"]
margin_right = 408.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 8 )
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="SettingsBG/VBoxContainer/VBoxContainer2"]
margin_top = 44.0
margin_right = 408.0
margin_bottom = 60.0
max_value = 1.0
step = 0.001
value = 0.5

[node name="VBoxContainer3" type="VBoxContainer" parent="SettingsBG/VBoxContainer"]
margin_top = 128.0
margin_right = 408.0
margin_bottom = 188.0

[node name="Music" type="Label" parent="SettingsBG/VBoxContainer/VBoxContainer3"]
margin_right = 408.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 8 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="SettingsBG/VBoxContainer/VBoxContainer3"]
margin_top = 44.0
margin_right = 408.0
margin_bottom = 60.0
max_value = 1.0
step = 0.001
value = 0.5

[node name="VBoxContainer5" type="VBoxContainer" parent="SettingsBG/VBoxContainer"]
margin_top = 192.0
margin_right = 408.0
margin_bottom = 192.0

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsBG/VBoxContainer"]
margin_top = 196.0
margin_right = 408.0
margin_bottom = 236.0

[node name="Label" type="Label" parent="SettingsBG/VBoxContainer/HBoxContainer"]
margin_right = 178.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 9 )
text = "Fullscreen"

[node name="CheckButton" type="CheckButton" parent="SettingsBG/VBoxContainer/HBoxContainer"]
margin_left = 182.0
margin_right = 258.0
margin_bottom = 40.0

[node name="DebugScreenBG" type="ColorRect" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
color = Color( 0.215686, 0.215686, 0.215686, 1 )

[node name="Label" type="Label" parent="DebugScreenBG"]
pause_mode = 2
anchor_right = 1.0
margin_top = 30.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )
text = "Debug"
align = 1

[node name="PlayerInput" type="LineEdit" parent="DebugScreenBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -12.0
margin_right = 100.0
margin_bottom = 14.0
grow_horizontal = 2
max_length = 15
context_menu_enabled = false
clear_button_enabled = true
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
placeholder_text = "enter code"

[node name="DebugCloseButton" type="Button" parent="DebugScreenBG"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = -30.0
focus_mode = 0
enabled_focus_mode = 0
text = "Close"

[node name="DebugSubmit" type="Button" parent="DebugScreenBG"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 30.0
margin_right = 50.0
margin_bottom = 50.0
focus_mode = 0
enabled_focus_mode = 0
text = "Enter"

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[connection signal="mouse_entered" from="PauseMenuBG/ResumeButton" to="." method="_on_ResumeButton_mouse_entered"]
[connection signal="pressed" from="PauseMenuBG/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="mouse_entered" from="PauseMenuBG/ControlsButton" to="." method="_on_ControlsButton_mouse_entered"]
[connection signal="pressed" from="PauseMenuBG/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="mouse_entered" from="PauseMenuBG/SettingsButton" to="." method="_on_SettingsButton_mouse_entered"]
[connection signal="pressed" from="PauseMenuBG/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="mouse_entered" from="PauseMenuBG/QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="pressed" from="PauseMenuBG/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="mouse_entered" from="ControlsBG/ControlsCloseButton" to="." method="_on_ControlsCloseButton_mouse_entered"]
[connection signal="pressed" from="ControlsBG/ControlsCloseButton" to="." method="_on_ControlsCloseButton_pressed"]
[connection signal="mouse_entered" from="SettingsBG/SettingsCloseButton" to="." method="_on_SettingsCloseButton_mouse_entered"]
[connection signal="pressed" from="SettingsBG/SettingsCloseButton" to="." method="_on_SettingsCloseButton_pressed"]
[connection signal="drag_ended" from="SettingsBG/VBoxContainer/VBoxContainer/MasterSlider" to="SettingsBG" method="_on_MasterSlider_drag_ended"]
[connection signal="value_changed" from="SettingsBG/VBoxContainer/VBoxContainer/MasterSlider" to="SettingsBG" method="_on_MasterSlider_value_changed"]
[connection signal="drag_ended" from="SettingsBG/VBoxContainer/VBoxContainer2/SFXSlider" to="SettingsBG" method="_on_SFXSlider_drag_ended"]
[connection signal="value_changed" from="SettingsBG/VBoxContainer/VBoxContainer2/SFXSlider" to="SettingsBG" method="_on_SFXSlider_value_changed"]
[connection signal="drag_ended" from="SettingsBG/VBoxContainer/VBoxContainer3/MusicSlider" to="SettingsBG" method="_on_MusicSlider_drag_ended"]
[connection signal="value_changed" from="SettingsBG/VBoxContainer/VBoxContainer3/MusicSlider" to="SettingsBG" method="_on_MusicSlider_value_changed"]
[connection signal="toggled" from="SettingsBG/VBoxContainer/HBoxContainer/CheckButton" to="SettingsBG" method="_on_CheckButton_toggled"]
[connection signal="pressed" from="DebugScreenBG/DebugCloseButton" to="." method="_on_DebugCloseButton_pressed"]
[connection signal="pressed" from="DebugScreenBG/DebugSubmit" to="." method="_on_DebugSubmit_pressed"]
